--- a/starter/package.json
+++ b/starter/package.json
@@ -4,13 +4,16 @@
   "description": "Landing page for natours",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
-
+    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:css": "concat -o css/style.contact.css css/icon-font.css css/style.comp.css"
   },
   "author": "Mike",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^5.0.0"
+    "autoprefixer": "^10.0.4",
+    "node-sass": "^5.0.0",
+    "postcss-cli": "^8.3.0"
   },
   "dependencies": {}
 }
